--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -1,5 +1,4 @@
 .container-card {
-
   top: 0;
   right: 0;
   bottom: 0;
@@ -11,17 +10,16 @@
   width: 302px;
   height: 410px;
   border-radius: 15px;
- 
 }
-.flight-text{
-    margin-left: 48px;
-    font-size: 13px;
-    color: rgb(139, 136, 132);
+.flight-text {
+  margin-left: 48px;
+  font-size: 13px;
+  color: rgb(139, 136, 132);
 }
 #cubeLink {
   height: 305px;
   margin: 15px 13px;
-  /* background-color: hsl(178, 100%, 50%); */
+
   border-radius: 13px;
 }
 
@@ -36,10 +34,6 @@
   margin: auto;
 }
 
-#cubeLink:hover #eye {
-  opacity: 1;
-}
-
 #cube {
   height: 100%;
   border-radius: 10px;
@@ -47,37 +41,14 @@
 }
 
 #cube:hover {
-  opacity: 30%;
+  opacity: 90%;
 }
-
-#header {
-  color: white;
-  font-size: 22px;
-  font-weight: 600;
-  margin: 5px 25px;
-  text-decoration: none;
-}
-
-#header:hover {
-  color: hsl(0, 0%, 0%);
-}
-
-/* #description {
-  color: hsl(215, 52%, 70%);
-  margin: 15px 25px;
-  font-size: 18px;
-  line-height: 1.5;
-} */
 
 #ethAndDays {
   display: flex;
   justify-content: space-around;
   gap: 80px;
   margin: -4px 0;
-}
-
-#ethPlusIcon {
-  margin-left: -5px;
 }
 
 #ethPlusIcon > svg {
@@ -87,7 +58,7 @@
 }
 #eth {
   color: hsl(0, 0%, 0%);
-  font-weight: 600;
+  /* font-weight: 600; */
   display: inline-block;
   vertical-align: middle;
 }
@@ -108,35 +79,8 @@
   color: rgb(0, 83, 199);
 }
 
-/* #line {
-  border-bottom: 1px solid hsla(215, 100%, 38%, 0.253);
-  width: 300px;
-  margin: auto;
-} */
-
-#jules {
-  margin: auto 25px;
-  margin-top: -5px;
-}
-
-/* #avatar {
-  display: inline-block;
-  vertical-align: middle;
-  width: 30px;
-  border: 1px solid white;
-  border-radius: 100%;
-  margin-right: 12px;
-} */
-
-/* #avatarName {
-  display: inline-block;
-  vertical-align: middle;
-  color: hsl(215, 100%, 37%);
-} */
-
 #mainName {
   color: white;
   margin-left: 1px;
   text-decoration: none;
 }
-
