--- a/src/components/Menus/css/MainHome.css
+++ b/src/components/Menus/css/MainHome.css
@@ -4,7 +4,7 @@
       rgba(18, 4, 122, 0.268),
       rgba(18, 4, 122, 0.367)
     ),
-    url(https://images.ctfassets.net/cnu0m8re1exe/6sLnMf6GKSgsXxbJbpGXWO/7ea7a98ebc24318f0d60b1f5484053de/shutterstock_707735803.jpg);
+    url(https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Mumbai_03-2016_114_Airport_international_terminal_interior.jpg/1200px-Mumbai_03-2016_114_Airport_international_terminal_interior.jpg);
   height: 15rem;
   background-position: center;
   background-repeat: no-repeat;
